<package>
  <name>objrecransac</name>
  <version>1.1.0</version>
  <description>
    RANSAC variant for 3D object recognition in occluded scenes

    This software contains source code provided by NVIDIA Corporation.
  </description>
  <license>README</license>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <author email="papzov@in.tum.de">Chavdar Papazov</author>
  <author email="burschka@in.tum.de">Darius Burschka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
